--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Drum Kit">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta property="og:url" content="https://alpacorp.github.io/drum-kit/">
+    <meta property="og:image" content="https://res.cloudinary.com/wesbos/image/fetch/q_auto,f_auto/https://s3.amazonaws.com/js30-cdn/small0.jpg">
     <meta property="og:description" content="Animated interface with you can engage with the keyboard and different sounds.">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/notas-musicales.png" type="image/x-icon">
     <title>Drum Kit</title>
   </head>
   <body>
@@ -52,15 +53,15 @@
       </div>
     </div>
     <audio src="/sounds/clap.wav" data-key="65"></audio>
-    <audio src="/sounds/hithat.wav" data-key="83"></audio>
+    <audio src="/sounds/hihat.wav" data-key="83"></audio>
     <audio src="/sounds/kick.wav" data-key="68"></audio>
     <audio src="/sounds/openhat.wav" data-key="70"></audio>
     <audio src="/sounds/boom.wav" data-key="71"></audio>
     <audio src="/sounds/ride.wav" data-key="72"></audio>
-    <audio src="sounds/snare.wav" data-key="74"></audio>
+    <audio src="/sounds/snare.wav" data-key="74"></audio>
     <audio src="/sounds/tom.wav" data-key="75"></audio>
     <audio src="/sounds/tink.wav" data-key="76"></audio>
 
-    <script type="text/javascript"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
